@@ -4,8 +4,10 @@ debathena-reactivate (2.0.38) unstable; urgency=low
     (Trac: #928)
   * Stop depending on kexec-tools, which hasn't been needed since 2.0.25
   * Wrap Depends line for easier reading
+  * Drop the schroot pam_env hack, it's not needed anymore (and stop
+    diverting /etc/pam.d/schroot)
 
- -- Jonathan Reed <jdreed@mit.edu>  Mon, 30 Jul 2012 14:44:14 -0400
+ -- Jonathan Reed <jdreed@mit.edu>  Wed, 01 Aug 2012 12:52:32 -0400
 
 debathena-reactivate (2.0.37) unstable; urgency=low
 
